Fix overflow on mobiles cause by Year select.

--- a/components/CheckoutCommitStep/CheckoutCommitStep.module.css
+++ b/components/CheckoutCommitStep/CheckoutCommitStep.module.css
@@ -23,6 +23,7 @@
 
 .years {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
